--- a/src/common/styles/Container.module.css
+++ b/src/common/styles/Container.module.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    flex-wrap: wrap;
     height: 100%;
     width: 80%;
     border: 1px solid red;
