--- a/src/skills/Skill/Skill.module.css
+++ b/src/skills/Skill/Skill.module.css
@@ -1,4 +1,20 @@
 .skill {
-    width: 260px;
-    background-color: orange;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   width: 300px;
+   margin: 10px auto;
+   background-color: orange;
+   text-align: center;
+   padding: 20px;
+}
+
+.icon {
+   width: 60px;
+   height: 60px;
+   background-color: gray;
+}
+
+.description {
+
 }
