--- a/src/contact/Contact.module.css
+++ b/src/contact/Contact.module.css
@@ -18,14 +18,21 @@
 .contactsForm {
    display: flex;
    flex-direction: column;
+   align-items: center;
    max-width: 96%;
 }
 
 .contactsForm input, textarea {
-   margin-bottom: 10px;
+   margin-bottom: 15px;
    padding: 10px;
    font-size: 16px;
+   width: 100%;
    outline: none;
+
+}
+.contactsForm button{
+   width: 100px;
+
 }
 
 .buttonSend {
