--- a/src/main/Main.module.css
+++ b/src/main/Main.module.css
@@ -4,6 +4,7 @@
 }
 
 .text {
+    font-family: Neucha, cursive;
     width: 300px;
     background-color: #b8f3b8;
     text-align: center;
@@ -12,5 +13,9 @@
 .photo {
     width: 300px;
     height: 400px;
-    background-color: #b8f3b8;
+}
+.avatar{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
