--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -1,51 +1,59 @@
 .projectsBlock {
-   background-color: bisque;
+    background-color: bisque;
 }
 
 .projectContainer {
-   flex-direction: column;
-   min-height: 100vh;
-   background-color: lightblue;
-   justify-content: space-evenly;
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: lightblue;
+    justify-content: space-evenly;
 
 }
 
 .title {
-   background-color: lightgoldenrodyellow;
+    background-color: lightgoldenrodyellow;
 }
 
 .projectItems {
-   display: flex;
-   flex-direction: row;
-   width: 100%;
-   flex-wrap: wrap;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    flex-wrap: wrap;
 
 }
 
 .project {
-   display: flex;
-   flex-direction: column;
-   width: 360px;
-   height: 360px;
-   border: 1px solid green;
-   background-color: cornflowerblue;
-   margin: 10px auto;
+    display: flex;
+    flex-direction: column;
+    width: 360px;
+    height: 360px;
+    border: 1px solid green;
+    background-color: cornflowerblue;
+    margin: 10px auto;
 }
 
 .avatarProject {
-   width: 100%;
-   height: 60%;
-   background-color: lightgreen;
+    align-items: center;
+    width: 100%;
+    height: 60%;
+}
+
+.projectImg {
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
 }
 
 .projectName {
-   width: 100%;
-   height: 10%;
-   background-color: antiquewhite;
+    width: 100%;
+    height: 10%;
+    background-color: antiquewhite;
+    text-align: center;
 }
 
+
 .projectDescription {
-   width: 100%;
-   height: 30%;
-   background-color: coral;
+    width: 100%;
+    height: 30%;
+    background-color: coral;
 }
