--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -1,17 +1,15 @@
 .projectsBlock {
-    background-color: bisque;
+   background-color:  #212529;
 }
 
 .projectContainer {
     flex-direction: column;
     min-height: 100vh;
-    background-color: lightblue;
     justify-content: space-evenly;
-
 }
 
 .title {
-    background-color: lightgoldenrodyellow;
+    color: white;
 }
 
 .projectItems {
@@ -19,41 +17,5 @@
     flex-direction: row;
     width: 100%;
     flex-wrap: wrap;
-
 }
 
-.project {
-    display: flex;
-    flex-direction: column;
-    width: 360px;
-    height: 360px;
-    border: 1px solid green;
-    background-color: cornflowerblue;
-    margin: 10px auto;
-}
-
-.avatarProject {
-    align-items: center;
-    width: 100%;
-    height: 60%;
-}
-
-.projectImg {
-    width: 100%;
-    height: 100%;
-    object-fit: fill;
-}
-
-.projectName {
-    width: 100%;
-    height: 10%;
-    background-color: antiquewhite;
-    text-align: center;
-}
-
-
-.projectDescription {
-    width: 100%;
-    height: 30%;
-    background-color: coral;
-}
