02_Feat:Title_Component_and_Fonts

--- a/src/footer/Footer.module.css
+++ b/src/footer/Footer.module.css
@@ -10,9 +10,9 @@
 }
 
 .titleName {
-   background-color: lightgray;
-   margin-top: 0;
-   margin-bottom: 10px;
+   letter-spacing: 3px;
+
+   margin: 0;
 }
 
 .socialNetworkBlock {
