--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,6 @@
 * {
    box-sizing: border-box;
-   --body-font: "Nunito",Helvetica,Arial,sans-serif;
-   --title-font: "Saira",Helvetica,Arial,sans-serif;
-   --primary-color-rgb: 207,31,31;
+   font-family: 'Josefin Sans', sans-serif;
 }
 
 .App {
